// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders confirmation 1`] = `
<ConfirmationContent
  cart={
    DeathCertificateCart {
      "localStorageDisposer": null,
      "siteAnalytics": null,
    }
  }
  contactEmail="ttoe@squirrelzone.net"
  orderId="123-456-7"
/>
`;

exports[`rendering renders payment 1`] = `
<PaymentContent
  cart={
    DeathCertificateCart {
      "localStorageDisposer": null,
      "siteAnalytics": null,
    }
  }
  order={null}
  stripe={null}
  submit={[Function]}
/>
`;

exports[`rendering renders review 1`] = `
<ReviewContent
  cart={
    DeathCertificateCart {
      "localStorageDisposer": null,
      "siteAnalytics": null,
    }
  }
  order={null}
  submit={[Function]}
/>
`;

exports[`rendering renders shipping 1`] = `
<ShippingContent
  cart={
    DeathCertificateCart {
      "localStorageDisposer": null,
      "siteAnalytics": null,
    }
  }
  order={null}
  submit={[Function]}
/>
`;
